# chusa_bot

./: 20190112  README.md  auto.h  id_rsa  id_rsa.pub  motor_controller.ino  ssh_host_ecdsa_key  ssh_host_ecdsa_key.pub  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub  test  test.cpp  togit.sh
3d_mapping/tilt_lidar/: CMakeLists.txt  package.xml
Controller_Unit/: Readme
Controller_Unit/Mapping/: Readme
Controller_Unit/Navigating/: Readme
Driving_Unit/: Readme
Driving_Unit/Turning/: Readme
Driving_Unit/accelerator/: Readme
Project/: git
Schedule/: 20190112
Sensing_Unit/: Readme  reference
arduino/tilt_lidar_step_motor_controller/: tilt_lidar_step_motor_controller.ino
chusa_PID/: CMakeLists.txt  package.xml
chusa_PID/src/: chusa_PID.cpp
chusa_bot/launch/: chusa_bot.launch
chusa_bringup/: CMakeLists.txt  package.xml
chusa_bringup/chusa_msgs/: CMakeLists.txt
chusa_bringup/launch/: chusa_bringup.launch
chusa_bringup/rviz/: rviz_config.rviz
chusa_controller/: CMakeLists.txt  package.xml
chusa_controller/include/cmd2ard/: cmd2ard.h
chusa_controller/launch/: chusa_cmd2ard.launch
chusa_controller/msg/: arduino.msg
chusa_controller/src/: cmd2ard.cpp
chusa_description/: CMakeLists.txt  package.xml
chusa_description/launch/: chusa_gazebo.launch  chusa_rviz.launch
chusa_description/urdf/: chusa.gazebo.xacro  chusa.urdf.xacro
chusa_description/worlds/: ex1.world  ex3.world
chusa_imu/: CMakeLists.txt  package.xml  setup.py
chusa_imu/launch/: chusa_imu.launch
chusa_imu/nodes/: chusa_imu  chusa_imu.py
chusa_msgs/: CMakeLists.txt
chusa_msgs/srv/: Sensing3DOnce.srv  StartArduino.srv  TfFromTilt.srv
chusa_navigation/: CMakeLists.txt  package.xml
chusa_navigation/launch/: chusa_navigation.launch  move_base.launch
chusa_navigation/maps/: map1.yaml
chusa_navigation/param/: global_costmap_params.yaml  local_costmap_params.yaml
chusa_odom/: CMakeLists.txt  package.xml
chusa_odom/include/chusa_odom/: chusa_odom.h
chusa_odom/launch/: chusa_odom.launch  odom_pub.launch  odom_test.launch
chusa_odom/src/: chusa_odom.cpp
chusa_slam/: CMakeLists.txt  package.xml
chusa_slam/launch/: chusa_slam.launch  (+1 more)
hmh/: hmh.cpp
imu_odom/: CMakeLists.txt  package.xml
imu_odometry/: CMakeLists.txt  package.xml
imu_twist/: CMakeLists.txt  package.xml
linear_velocity_experiment/: linear_velocity_experiment.ino
motor_controller/: motor_controller.ino
radar/: AUTO.h  EKF_SLAM.cpp  EKF_SLAM.h  robot.cpp  robot.h
raspberry/: CMakeLists.txt  a.out  arduino.sh  arduino_setting  constant.h  hc_sr04.cpp  ipaddr.txt  main.cpp  ultrasonic.cpp
robot_pose_ekf/: robot_pose_ekf.launch
step_motor_arduino/: step_motor_arduino.ino
test/: package.xml
test_py/: CMakeLists.txt  package.xml
tilt_lidar/: tilt_lidar.ino
(+83 files in other folders)
